// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly with children 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 border-2 border-foreground bg-background hover:border-rose-500 h-[60px] p-3"
  >
    Button
  </button>
</div>
`;

exports[`Button > renders correctly with custom className 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 border-2 border-foreground bg-background hover:border-rose-500 h-[60px] p-3 font-extrabold text-pink-600"
  />
</div>
`;

exports[`Button > renders correctly with default props 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 border-2 border-foreground bg-background hover:border-rose-500 h-[60px] p-3"
  />
</div>
`;

exports[`Button > renders correctly with disabled prop 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 border-2 border-foreground bg-background hover:border-rose-500 h-[60px] p-3"
    disabled=""
  />
</div>
`;

exports[`Button > renders correctly with size 'icon' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 border-2 border-foreground bg-background hover:border-rose-500 size-[40px] rounded px-1 py-2"
  />
</div>
`;

exports[`Button > renders correctly with size 'small' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 border-2 border-foreground bg-background hover:border-rose-500 h-[40px] p-2"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 text-gray-500 hover:bg-foreground hover:text-white h-[60px] p-3"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost' and size 'icon' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 text-gray-500 hover:bg-foreground hover:text-white size-[40px] rounded px-1 py-2"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost' and size 'small' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 text-gray-500 hover:bg-foreground hover:text-white h-[40px] p-2"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost', size 'default', and disabled 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 text-nowrap rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-foreground disabled:pointer-events-none disabled:opacity-50 text-gray-500 hover:bg-foreground hover:text-white h-[60px] p-3"
    disabled=""
  />
</div>
`;
